DevOps/lessons/part.4/2026-08-26.5.k8s/nginx.yaml
---

apiVersion: v1
kind: Pod
metadata:
  name: app-nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - name: http-nginx
          containerPort: 80


---
apiVersion: v1
kind: Pod
metadata:
  name: app-apache
  labels:
    app: apache
spec:
  containers:
    - name: httpd
      image: httpd:alpine
      ports:
        - name: http-apache
          containerPort: 80

         
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 8080   
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  type: ClusterIP
  selector:
    app: apache 
  ports:
  - port: 8080    
    targetPort: 80
