DevOps/lessons/part.4/2026-08-26.5.k8s/petclinic_deployment.olha-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: 17062000/petclinic-new
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
spec:
  type: ClusterIP
  selector: 
    app: petclinic
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic-svc
                port:
                  number: 8080
